<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".screen.cities_list_screen.AddCityActivity"
    tools:showIn="@layout/activity_add_city">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:paddingTop="10dp"
        android:visibility="invisible"
        android:orientation="horizontal"
        android:id="@+id/progress_bar"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/average_start_margin"
            android:id="@+id/progress_bar_bar"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/average_end_margin"
            android:layout_marginStart="@dimen/average_start_margin"
            android:text="@string/update"
            android:textSize="@dimen/large_text"
            android:gravity="center|start"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/cities_error"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_margin="30dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cities_error"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/city_array"
        android:layout_height="match_parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:visibility="invisible"
        android:animateLayoutChanges="true"
        android:background="@color/colorTransparentBlack"
        android:layout_width="match_parent"
        android:id="@+id/search_window"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textLayout"
            android:layout_marginEnd="@dimen/average_end_margin"
            android:layout_marginStart="@dimen/average_start_margin"
            android:background="@drawable/search_background"
            android:layout_marginTop="@dimen/average_top_margin"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/autocomplete_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>