<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="homounikumus1.com.myweatherviewer.screen.main_screen.MainActivity">

    <item
        android:icon="@drawable/ic_place_24dp"
        android:title=""
        app:showAsAction="always"
        android:id="@+id/place"/>
    <item
        android:icon="@drawable/ic_town_24dp"
        android:title="@string/cities"
        app:showAsAction="ifRoom"
        android:id="@+id/add_city"/>
    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:id="@+id/settings"/>
</menu>
