<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main_description_fragment"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/extra_large_text" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="@dimen/main_image_width"
        android:layout_height="@dimen/main_image_height"
        android:layout_gravity="center"
        android:contentDescription="@string/weather_condition_image"
        android:gravity="center" />

    <TextView
        android:id="@+id/main_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/large_text_plus" />

    <TextView
        android:id="@+id/main_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/large_text_plus" />
</LinearLayout>